style.css
:root {
  --ff-primary: "Fira Sans", sans-serif;
  --ff-secondary: "Fira Code", monospace;
  --clr-nav-item: #2e2e2e;
  --clr-purple-dark: #120236;
  --clr-purple-light: #613fb1;
}

* {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
  display: block;
}

body {
  font-family: var(--ff-primary);
  background: #f5f5f5;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

/* Header */

header {
  margin: 40px 0;
}

.header {
  display: flex;
  max-width: 1400px;
  margin: 0 auto;
  justify-content: space-between;
  align-items: center;
}

.menu {
  display: flex;
}

.menu a {
  display: flex;
  flex-direction: column;
  text-transform: uppercase;
  color: var(--clr-nav-item);
  font-family: var(--ff-primary);
  padding: 1rem 2rem;
  margin-bottom: 2px;
}

.menu a:hover::after {
  content: "";
  display: block;
  width: 60%;
  height: 2px;
  background: var(--clr-purple-light);
  margin-bottom: -2px;
}

/* About */

.about {
  position: relative;
  display: flex;
  margin: 6rem auto;
  justify-content: center;
  max-width: 500px;
}

.about-c {
  display: flex;
  flex-direction: column;
  max-width: 455px;
}

.detail {
  position: absolute;
  left: -5px;
  top: 4px;
}

.subtitle {
  position: relative;
  top: 10px;
  display: block;
  font-size: 3rem;
  color: #000;
  font-weight: bold;
}

.title {
  font-size: 4rem;
  color: var(--clr-purple-dark);
  font-weight: bold;
}

.description {
  margin-top: 1rem;
  margin-bottom: 0.4rem;
  font-family: var(--ff-secondary);
  font-style: normal;
  font-weight: bold;
  font-size: 1.3rem;
  line-height: 1.5;
}

.description span {
  color: var(--clr-purple-light);
}

.located {
  font-family: var(--ff-secondary);
  font-size: 1.3rem;
}

/* Projects */

.projects {
  max-width: 1200px;
  margin: 10rem auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 20px 100px;
}

.section-title {
  display: flex;
  text-transform: uppercase;
  font-size: 2rem;
  align-items: center;
  gap: 10px;
  font-weight: bold;
}

.section-title::before {
  content: "";
  display: block;
  width: 10px;
  height: 22px;
  background: #b87ce6;
  border-radius: 5px;
}

.projects-c {
  display: flex;
  justify-content: space-between;
  padding: 0 1.3rem;
}

.list-title {
  font-size: 1.625rem;
  color: #2e2e2e;
  margin-bottom: 1.25rem;
}

.list-description {
  font-size: 1.125rem;
  color: #000;
  max-width: 37ch;
  margin-bottom: 1.25rem;
}

.tech-list {
  display: grid;
  grid-template-columns: repeat(3, auto);
  justify-content: flex-start;
  align-items: flex-start;
  gap: 10px 15px;
}

.tech-list li {
  font-size: 0.875rem;
  text-transform: uppercase;
  padding: 0.8rem 1rem;
  color: #111010;
  font-weight: 700;
  background: #cbcbcb;
  border-radius: 10px;
  text-align: center;
}

.tech-list li:last-child {
  grid-column: 1 / -1;
  justify-self: flex-start;
  align-items: flex-start;
}

/* Formation */

.formation {
  max-width: 1200px;
  margin: 10rem auto;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: 20px 100px;
}

.content {
  position: relative;
  margin-top: 20px;
  display: flex;
  align-items: flex-start;
}

.content img {
  margin-right: 10px;
}

.degree:first-child,
.course:first-child {
  position: relative;
  top: -5px;
}

.degree:last-child,
.course:last-child {
  position: relative;
  top: 5px;
}

.degree-c h3,
.course h3 {
  font-size: 1.25rem;
  color: #2e2e2e;
}

.degree-c span,
.course span {
  display: block;
}

.degree-c span:last-child,
.course span:last-child {
  margin-bottom: 5px;
}

.located {
  font-size: 1.125rem;
  font-family: var(--ff-primary);
  color: #525050;
}

.period {
  font-size: 0.75rem;
  color: #838383;
  font-family: var(--ff-primary);
}

/* Social */

.social {
  position: relative;
  max-width: 1200px;
  margin: 12rem auto;
}

.social-list {
  position: absolute;
  margin-top: 1rem;
  display: flex;
  gap: 2rem;
  left: 10px;
}

/* Footer */

footer {
  text-align: center;
  color: #525050;
  margin-top: 5rem;
  margin-bottom: 2rem;
}

hr {
  max-width: 100%;
  height: 10px;
  background: #2d0f71;
  border: 0px;
}

